<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/nitos_background_color" >

       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" > 

   
          <EditText
              android:id="@+id/usernameEditText"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="40dp"
              android:layout_marginBottom="30dp"
              android:padding="8dp"
              android:ems="10"
              android:inputType="text" 
              android:hint="@string/username"
              android:background="@drawable/rounded_edittext">
           </EditText>
   
     
           <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="8dp"
                android:ems="10"
                android:inputType="textPassword" 
                android:hint="@string/password"
                android:background="@drawable/rounded_edittext"/>
           
          <Button
                android:id="@+id/signinButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_light_blue_button"
                android:text="@string/signin" 
                android:textColor="@color/white_color"/>
           
          <CheckBox 
                android:id="@+id/keep_me_signed_in_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_me_signed_in"
                style="@style/CustomFontStyleText"
                android:textSize="@dimen/checkbox_text_size"/>
   
 
          <ImageView
                android:id="@+id/nitlabImageView"
                android:layout_width="230dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/nitlab_image"
                android:src="@drawable/nitlab_letters" />
    
    </LinearLayout>
</ScrollView>
